TP #2198 - Fix contrast errors on sr text triggered by inherited colors

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -213,6 +213,11 @@ footer {
     font-family: 'Open Sans', Arial, Tahoma, sans-serif;
 }
 
+a#skip2main {
+  color: #0054AD;
+  background: #fff;
+}
+
 #skip2main {
   position: absolute;
   left: 10px;
@@ -983,6 +988,14 @@ a:focus {
   height: 1px;
   width: 1px;
 }
+
+#searchsubmit {
+  .screen-reader-text{
+      color:#024731;
+      background-color: #fff;
+  }
+}
+
 
 
 /* =Menu
